# AEBME280SPI

./: CMakeLists.txt  README.md  aebme280.cpp  aebme280.h  buildall.sh  loadpico.sh  main.cpp
